Collapse style fix

--- a/public/sass/custom/component/collapse.scss
+++ b/public/sass/custom/component/collapse.scss
@@ -33,10 +33,6 @@ details {
     }
   }
 
-  *:nth-child(2) {
-    margin-top: 1.25rem;
-  }
-
   summary {
     padding: 0.438rem 1.25rem 0.438rem 1.25rem;
     font-size: 1rem;
@@ -45,6 +41,11 @@ details {
     // Chrome specific due to no support for list-style: none on summary tag.
     &::-webkit-details-marker {
       display: none;
+    }
+
+    // Add a top margin to the element after the summary.
+    + *:nth-child(2) {
+      margin-top: 1.25rem;
     }
 
     &:before {
